gradle optionを省メモリ化 refs #10